@@ -3,6 +3,7 @@ trunk
 * omxGraphviz() either prints to stdout or to a filename
 * Relaxed omxGraphviz() to draw an arrow if (value != 0 || free == TRUE || !is.na(label))
 * omxGraphviz() returns a character string invisibly
+* error checking for bogus definition variables
 
 Release 0.2.1-922
 =================
